# lab01

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  main.cpp  package.json  version.h.in
.github/workflows/: build.yml  linux.yml  macos.yml  main.yml  release.yml  windows.yml
